# bazel-bsp

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  maven_install.json
scala/: BUILD.bazel  maven.bzl
src/main/java/com/github/tmccombs/bazelbsp/: BUILD.bazel  BazelBuildServer.java  Main.java
