load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "scala_library",
)

load("maven.bzl", "scala_version")

compiler_classpath = [
    "@maven//:org_scala_lang_scala_compiler",
    "@maven//:org_scala_lang_scala_library",
    "@maven//:org_scala_lang_scala_reflect",
]

runtime_classpath = [
    "@maven//:org_scala_lang_scala_library",
]

configure_bootstrap_scala(
    name = "default_scala",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
    vsibility = ["//visibility:public"],
)
