load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "bazelbsp-lib",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:ch_epfl_scala_bsp4j",
        "@maven//:org_eclipse_lsp4j_org_eclipse_lsp4j_jsonrpc",
    ],
)

java_binary(
    name = "bazelbsp",
    main_class = "com.github.tmccombs.bazelbsp.Main",
    runtime_deps = [":bazelbsp-lib"],
    visibility = ["//visibility:public"],
)
